test/multilocale/bradc/assignRemoteConst.good
assignRemoteConst.chpl:1: In function 'foo':
assignRemoteConst.chpl:4: error: illegal lvalue in assignment
